--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,18 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
+    "@zeit/next-css": "^1.0.1",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.1.1",
+    "node-sass": "^4.13.0",
+    "rc-slider": "^8.7.1",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-select": "^3.0.8"
   },
   "devDependencies": {
     "@types/node": "^12.11.7",
