update to prisma 2.0.0-preview017.2
- removing old migrations b/c of braking changes to prisma

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
+    "target": "es2016",
+    "module": "commonjs",
     "lib": ["esnext"],
-    "strict": true
+    "rootDir": "src",
+    "strict": true,
+    "outDir": "dist"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["prisma/**/*"]
 }
