--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
 {
   "name": "typescript-graphql",
-  "main": "dist/server.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "yarn -s clean && yarn -s generate && tsc",
+    "build": "npm -s run clean && npm -s run generate && tsc",
     "style": "prettier --write 'src/**/*'",
     "dev": "ts-node-dev --tree-kill --no-notify --respawn --transpile-only src/server.ts",
-    "generate": "yarn -s generate:prisma && yarn -s generate:nexus",
+    "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
     "generate:prisma": "prisma2 generate",
-    "generate:nexus": "NODE_ENV=development ts-node --transpile-only src/schema",
+    "generate:nexus": "ts-node --transpile-only src/schema",
+    "postinstall": "npm -s run generate",
     "data:inject": "ts-node prisma/seed.ts"
   },
   "engines": {
