--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
     "lib": ["esnext"],
     "rootDir": "src",
     "strict": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*"],
-  "exclude": ["prisma/**/*"]
+  "include": ["src/**/*"]
 }
