--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -23,9 +26,11 @@
     "simple-statistics": "^7.0.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^9.1.4",
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "cross-env": "^6.0.3",
     "typescript": "^3.6.4"
   }
 }
