--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "rc-slider": "^8.7.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-icons-kit": "^1.3.1",
     "react-select": "^3.0.8",
     "simple-statistics": "^7.0.5"
   },
