--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.11.0",
     "react-icons-kit": "^1.3.1",
     "react-select": "^3.0.8",
+    "react-tooltip": "^3.11.1",
     "simple-statistics": "^7.0.5"
   },
   "devDependencies": {
