--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-icons-kit": "^1.3.1",
     "react-select": "^3.0.8",
     "react-tooltip": "^3.11.1",
-    "simple-statistics": "^7.0.5"
+    "simple-statistics": "^7.0.5",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^9.1.4",
